# nmg

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  README.org  main.cpp
lib/: CMakeLists.txt  boxblur.cpp  boxblur.h  cli.cpp  cli.h  gaussianblur.cpp  gaussianblur.h  intensitymap.cpp  intensitymap.h  normalmapgenerator.cpp  normalmapgenerator.h  specularmapgenerator.cpp  specularmapgenerator.h  ssaogenerator.cpp  ssaogenerator.h
